GNOME Bugzilla – Bug 710554
When using the clutter backend, cursor disappears when it leaves the stage.
Last modified: 2018-08-17 19:58:09 UTC
That's caused by hiding being done in reaction to motion in the stage. Removing the timeout callback on "leave-event" fixes the bug.
Created attachment 257766 [details] [review] fixes the reported issue
Created attachment 257767 [details] [review] fixes the reported issue correctly.
Review of attachment 257767 [details] [review]: Except a small style error, looks good to me, any upstream person to comment ? ::: pp-clutter.c @@ +489,3 @@ +static gboolean stage_left (ClutterActor *actor, + ClutterEvent *event, + gpointer renderer) Got tabs instead of spaces, and previous line indentation.
Review of attachment 257767 [details] [review]: True, I'm spoiled by pre-commit hooks and indent scripts I suppose :) Thanks for the review.
Comment on attachment 257767 [details] [review] fixes the reported issue correctly. commit 94b2ec0e11195c1b8e6993980ecb6913faee8cfd Author: Mathieu Duponchelle <mduponchelle1@gmail.com> Date: Sun Oct 20 18:50:13 2013 +0200 clutter: don't hide cursor when stage was left. Fixes : https://bugzilla.gnome.org/show_bug.cgi?id=710554
pinpoint is not under active development anymore since 2015. Its codebase has been archived: https://gitlab.gnome.org/Archive/pinpoint/commits/master Closing this report as WONTFIX as part of Bugzilla Housekeeping to reflect reality. Please feel free to reopen this ticket (or rather transfer the project to GNOME Gitlab, as GNOME Bugzilla is deprecated) if anyone takes the responsibility for active development again.