clutter: don't hide cursor when stage was left.

Fixes : https://bugzilla.gnome.org/show_bug.cgi?id=710554